<resources>
    <string name="app_name">司机通</string>
    <string name="tap_exit">再次点击返回键退出</string>
    <string name="unknown">未知</string>
    <string name="save">保存</string>

    <string name="main_homepage">首页</string>
    <string name="main_orders">派车单</string>
    <string name="main_mine">我的</string>
    <string name="mine_set">设置</string>

    <string name="login_fail">登录失败</string>
    <string name="login_role_fail">用户不存在或密码错误</string>

    <string name="login_hint_acc">手机号</string>
    <string name="login_hint_nick">输入昵称</string>
    <string name="login_hint_pwd">密码</string>
    <string name="login_hint_confirm">确认密码</string>
    <string name="login_hint_code">输入验证码</string>
    <string name="account_validate_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="pwd_modify">修改密码</string>
    <string name="register_success">注册成功，将回到登录界面</string>
    <string name="retrieve_success">重置密码成功，请重新登录</string>
    <string name="reset_password_success">修改密码成功，请牢记</string>
    <string name="register_code_success">验证码发送成功，验证码有效期30分钟</string>
    <string name="operation_failed">操作失败</string>
    <string name="operation_success">操作成功</string>
    <string name="login_register">没有账号？注册一个</string>
    <string name="login_retrieve">忘记密码？</string>
    <string name="account_pwd_reset">重置密码</string>
    <string name="acc_empty">请输入手机号</string>
    <string name="pwd_empty">请输入密码</string>
    <string name="confirm_fail">两次密码不相同</string>
    <string name="code_empty">请输入验证码</string>
    <string name="pwd_old">旧密码</string>
    <string name="pwd_new">新密码</string>
    <string name="pwd_old_hint">请输入正在使用的密码</string>
    <string name="pwd_new_hint">请输入新的密码</string>
    <string name="pwd_confirm_hint">请再次输入新的密码</string>


    <string name="ing">正在进行</string>
    <string name="not_receive">待接单</string>

    <string name="order_ing_bill_no">派车单号</string>
    <string name="order_ing_bill_buyer">收货人</string>
    <string name="order_ing_bill_address_buyer">收货地址</string>
    <string name="order_ing_bill_contact">联系方式</string>
    <string name="order_ing_bill_person">联系人</string>
    <string name="address_container_get">提箱地址</string>
    <string name="address_container_rtn">还箱地址</string>
    <string name="time_container_delivery">送货时间</string>
    <string name="info_container">箱信息</string>
    <string name="cntr_no">箱号</string>
    <string name="cntr_detail">箱型箱量</string>
    <string name="time_container_get">提箱时间</string>
    <string name="time_container_rtn">还箱时间</string>
    <string name="driver_container_get">提箱司机</string>
    <string name="driver_container_rtn">还箱司机</string>
    <string name="truck_container_get">车牌号</string>
    <string name="truck_container_rtn">车牌号</string>
    <string name="title_container_get">提箱</string>
    <string name="title_container_rtn">还箱</string>
    <string name="order_ing_empty">没有正在进行的派车单</string>
    <string name="order_new_empty">没有新的派车单</string>

    <string name="order_check">查看</string>
    <string name="order_receive">接单</string>
    <string name="order_refuse">拒绝</string>
    <string name="order_cancel">撤销</string>
    <string name="order_confirm_get">提箱完成</string>
    <string name="order_confirm_rtn">还箱完成</string>

    <string name="order_list_all">全部</string>
    <string name="order_list_new">未接单</string>
    <string name="order_list_received">已接单</string>
    <string name="order_list_finished">已完成</string>
    <string name="order_list_empty">没有数据</string>


    <string name="title_bind_group">车队挂靠</string>
    <string name="unbound_group">未挂靠</string>
    <string name="bind_group_ing">审核中</string>
    <string name="bound_group">已挂靠</string>
    <string name="bind_group_tip">挂靠车队后才可接受派车单</string>
    <string name="bind_group_tip_2">挂靠申请审核中</string>
    <string name="title_personal">个人信息</string>
    <string name="personal_full">已完整</string>
    <string name="bind_not_full">待完善</string>
    <string name="personal_info_tip">个人信息完整</string>
    <string name="personal_info_miss">%s待完善</string>
    <string name="title_settings">设置</string>
    <string name="settings_tip_version_new">检测到新版本</string>
    <string name="title_about_us">关于我们</string>
    <string name="our_group">山东电子口岸</string>

    <string name="info_phone">手机号</string>
    <string name="info_phone_hint">请输入手机号</string>
    <string name="info_name">姓名</string>
    <string name="info_name_hint">请输入姓名</string>
    <string name="info_id">身份证</string>
    <string name="info_id_hint">请输入身份证</string>
    <string name="info_license">驾驶证</string>
    <string name="info_license_hint">请输入驾驶证</string>
    <string name="info_license_type">驾驶证类型</string>
    <string name="info_truck">常用车牌号</string>
    <string name="info_truck_hint">请输入常用车牌号</string>
    <string name="info_dismiss">%s等待完善</string>

    <string name="group_select_hint">车队名称</string>
    <string name="group_bind_apply">申请挂靠</string>
    <string name="group_bind_cancel">撤销申请</string>
    <string name="group_info">车队信息</string>
    <string name="group_name">车队名称</string>
    <string name="group_contact_person">联系人</string>
    <string name="group_bind_description">操作说明：\n
        1、选择要挂靠的车队，支持模糊查询\n
        2、点击申请挂靠\n
        3、如果车队已经有您的信息，申请成功\n
        4、如果车队还没有您的信息，请耐心等待车队审核或联系车队负责人审核您的申请\n
        5、如有疑问，请拨打客户服务电话：95198</string>

    <string name="group_bound_info">挂靠信息</string>
    <string name="group_bound">您已挂靠的车队：</string>
    <string name="group_bound_ing">您申请挂靠的车队：</string>
    <string name="group_unbind_description">操作说明：\n
        1、如需解除挂靠，请联系车队管理员解除。\n
        2、如有疑问，请拨打客户服务电话：95198</string>

    <string name="order_status_unknown">未知状态</string>

    <string name="order_status_t_0">未派车</string>
    <string name="order_status_t_1">待接单</string>
    <string name="order_status_t_2">已接单</string>
    <string name="order_status_t_3">已拒绝</string>
    <string name="order_status_t_4">已提箱</string>

    <string name="order_status_r_0">未派车</string>
    <string name="order_status_r_1">待接单</string>
    <string name="order_status_r_2">已接单</string>
    <string name="order_status_r_3">已拒绝</string>
    <string name="order_status_r_4">已还箱待确认</string>
    <string name="order_status_r_5">还箱完成</string>

    <!--提示语-->
    <string name="order_collect_success">已将派车单添加至首页“正在进行”</string>
    <string name="order_remove_success">已将派车单从“正在进行”移除</string>
    <string name="order_collect_exchange">是否将“正在进行”派车单中的:%s替换为该派车单:%s?</string>
    <string name="order_collect_remove">确认将该派车单移除“正在进行”？</string>
    <string name="order_accept_confirm">确定要接受该派车单?</string>
    <string name="order_refuse_confirm">确定要拒绝该派车单?</string>
    <string name="order_cancel_confirm">确定要撤销该派车单?</string>
    <string name="order_confirm_t">确认提箱？</string>
    <string name="order_confirm_r">确认还箱?</string>
</resources>
