<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_dark"
            android:text="@string/pwd_old"/>
        <EditText
            android:id="@+id/pwd_old"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:textSize="@dimen/text_mid"
            android:hint="@string/pwd_old_hint"
            android:background="@color/transparent"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/cursor"/>
    </LinearLayout>
    <include layout="@layout/view_line_horizontal_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_dark"
            android:gravity="center"
            android:text="@string/pwd_new"/>
        <EditText
            android:id="@+id/pwd_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:textSize="@dimen/text_mid"
            android:background="@color/transparent"
            android:hint="@string/pwd_new_hint"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/cursor"/>
    </LinearLayout>
    <include layout="@layout/view_line_horizontal_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:textColor="@color/text_dark"
            android:text="@string/login_hint_confirm"/>
        <EditText
            android:id="@+id/pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/transparent"
            android:padding="5dp"
            android:textSize="@dimen/text_mid"
            android:hint="@string/pwd_confirm_hint"
            android:inputType="phone"
            android:textCursorDrawable="@drawable/cursor"/>
    </LinearLayout>
    <include layout="@layout/view_line_horizontal_light"/>
    <Button
        android:id="@+id/modify"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_btn_bg"
        android:text="@string/pwd_modify"
        android:textSize="@dimen/text_big"
        android:textColor="@color/white"/>
</LinearLayout>