<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/retrieve_acc"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_acc"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>
    <EditText
        android:id="@+id/retrieve_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_pwd"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>

    <EditText
        android:id="@+id/retrieve_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:textSize="@dimen/text_mid"
        android:hint="@string/login_hint_confirm"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint"
        android:textCursorDrawable="@drawable/cursor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp">
        <EditText
            android:id="@+id/retrieve_code"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="@dimen/text_mid"
            android:hint="@string/login_hint_code"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            android:textCursorDrawable="@drawable/cursor"/>
        <Button
            android:id="@+id/retrieve_code_get"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            tools:text="获取验证码（60）"
            tools:textColor="@color/white_disable"
            android:text="@string/account_validate_code"/>
    </LinearLayout>

    <Button
        android:id="@+id/retrieve_commit"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_btn_bg"
        android:text="@string/account_pwd_reset"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/white"/>
</LinearLayout>