<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/receive"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/bg_btn_pressed_border"
        android:gravity="center"
        android:textSize="@dimen/text_micro"
        android:textColor="@color/colorPrimary"
        android:text="@string/order_receive"/>
    <TextView
        android:id="@+id/refuse"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/bg_btn_pressed_border"
        android:gravity="center"
        android:textSize="@dimen/text_micro"
        android:textColor="@color/colorPrimary"
        android:text="@string/order_refuse"/>
    <TextView
        android:id="@+id/cancel"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/bg_btn_pressed_border"
        android:gravity="center"
        android:textSize="@dimen/text_micro"
        android:textColor="@color/colorPrimary"
        android:text="@string/order_cancel"/>
    <TextView
        android:id="@+id/check"
        tools:visibility="visible"
        android:visibility="gone"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/bg_btn_pressed_border"
        android:gravity="center"
        android:textSize="@dimen/text_micro"
        android:textColor="@color/colorPrimary"
        android:text="@string/order_check"/>
</LinearLayout>