<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="120dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_bound" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36sp"
            android:textColor="@color/colorPrimary"
            android:shadowColor="@color/gray"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:text="@string/bound_group" />
    </LinearLayout>

    <TextView
        android:id="@+id/motorcade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_big"
        android:textColor="@color/text_dark"
        android:text="@string/group_bound" />

    <TextView
        android:id="@+id/motorcade_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_micro"
        android:textColor="@color/orange"
        android:layout_marginTop="5dp"
        tools:text="青岛港四方车队" />
    <TextView
        android:id="@+id/cancel"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_border_orange"
        android:gravity="center"
        android:textSize="@dimen/text_mid"
        android:textColor="@color/orange"
        android:text="@string/group_bind_cancel" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:textSize="@dimen/text_micro"
        android:textColor="@color/text_gray"
        android:lineSpacingExtra="5dp"
        android:text="@string/group_unbind_description" />
</LinearLayout>